--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -16,7 +16,7 @@
     </head>
     <body>
         <header class="header">
-            <h1>ПРОФИЛЬ</h1>
+            RatingHabits
         </header>
 
         <div class="auth-container">
