--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -8,6 +8,7 @@
 body {
   font-family: 'Inter', sans-serif;
   background: #060606;
+  background-image: url('../images/back.png');
   color: #ffffff;
   display: flex;
   flex-direction: column;
@@ -614,7 +615,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     justify-content: end;
     
   margin-top: auto;
-  background: #060606;
+  background: #161616;
   color: #fff;
   text-align: center;
   padding: 14px 0;
